2006-07-23  Stefan Petersen  <spe@localhost.localdomain>

	* src/gerb_image.h, src/gerber.c, gerbv.c: Added patch from
	  extensive (Sourceforge alias) that according to him make
	  gerbv handles autoscaling of gerber files with mm better.

	* src/drill.c, src/gerb_file.c: Fixed some possible memory 
	  leaks and SIGSEGVs pointed out by Wolfgang Wieser 
	  (hand patched from #1201900).

2006-05-07  Stefan Petersen  <spe@localhost.localdomain>

	* src/draw_amacro.c: Daniel Mack - zonque submitted
	  as a patch (1350283) (with no file attached though) that
	  renaming stack_t to macro_stack_t would make gerbv build
	  on darwin.

2005-09-28 Dan McMahill

	* src/drill.c: Remove an lval typecast.  Not only does this get
	  gerbv to compile with gcc4 and other non-gcc compilers, it 
	  was no longer needed as the types involved were all doubles 
	  anyway.

2005-02-15  Stefan Petersen  <spe@siouxsie.umunet.org>

        * src/draw_amacro.c: Forgot to copy gc to local_gc
          so drawing inherits gc from image wide setting.
          Pointed out by Warren Young.

2005-02-08  Tomasz Motylewski  <t.motylewski@bfad.de>
	* src/gerbv.c: malloc strlen+2, not +1
	* src/gerb_file.c: malloc len+1, not len

2005-01-06  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/Makefile.am: A clean make distcheck by adding some missing
	  .h-files in Makefile.am

	* src/*.c: Removed portability to GTK+ 1.x by changing configure.in
	  and remove USE_GTK2 in many small places. Also made some reformat
	  of the code to fit into the rest of the gerbv codebase.

2004-12-28  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/draw.c: When drawing circles I ignored if circle
          had inner diameter, which was pointed out by Harry Eaton. 
          Not anymore... Closes bug #1050340 in this branch.

	* Updated to TinyScheme 1.35

2004-10-30  Stefan Petersen  <spe@siouxsie.umunet.org>

        * src/draw_amacro.c: Forgot to use local_gc when drawing some